--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-server.address = 194.87.239.100
+server.address = localhost
 server.port = 8181
 #spring.profiles.active=prod
