--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 server.address = localhost
 server.port = 8181
 #spring.profiles.active=prod
+logging.level.root= trace
+#logging.level.org.springframework.web= ERROR
+#spring.messages.basename= # Default is messages.
+#spring.messages.encoding= # Default is UTF-8
