change some html files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,13 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 server.address = localhost
 server.port = 8181
 #spring.profiles.active=prod
-logging.level.root= trace
-#logging.level.org.springframework.web= ERROR
+#logging.level.root= info
+logging.level.org.springframework.web= info
+logging.level.org.hibernate=info
+logging.level.com.zaxxer.hikari=info
+logging.level.org.mongodb.driver=info
+logging.level.com.cherkasov=trace
+logging.level.org.thymaleaf=info
+
 #spring.messages.basename= # Default is messages.
 #spring.messages.encoding= # Default is UTF-8
