--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,18 @@
             <version>1.10</version>
         </dependency>
 
+      <!--swagger for REST API-->
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>2.7.0</version>
+      </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>2.7.0</version>
+      </dependency>
+
     </dependencies>
 
     <build>
