--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ## "root" as username and password.
 spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url = jdbc:h2:mem:store
-spring.datasource.url = jdbc:h2:./test
+spring.datasource.url = jdbc:h2:./test;AUTO_SERVER=true
 #spring.datasource.username = postgres
 #spring.datasource.password =
 #
