--- a/src/main/resources/db.h2.properties
+++ b/src/main/resources/db.h2.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:./test
+jdbc.url=jdbc:h2:./test;AUTO_SERVER=true
 #jdbc.username=postgres
 #jdbc.password=
 hibernate.dialect=org.hibernate.dialect.H2Dialect
