--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
                             <locations>
                                 <location>com.cherkasov.controllers</location>
                             </locations>
-                            <basePath>/api</basePath>
+                            <basePath>/api/v1</basePath>
                             <info>
                                 <title>Smart Home - REST API</title>
                                 <description>REST API interface and documentation.</description>
@@ -200,6 +200,7 @@
                             <swaggerDirectory>${project.build.directory}/api</swaggerDirectory>
                             <attachSwaggerArtifact>true</attachSwaggerArtifact>
                             <swaggerApiReader>com.github.kongchen.swagger.docgen.reader.SpringMvcApiReader</swaggerApiReader>
+
                         </apiSource>
                     </apiSources>
                 </configuration>
