--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,25 @@ logging.level.org.thymaleaf=info
 
 #spring.messages.basename= # Default is messages.
 #spring.messages.encoding= # Default is UTF-8
+
+
+##############################
+#actuator
+#port used to expose actuator
+management.port=9081
+
+#CIDR allowed to hit actuator
+management.address=127.0.0.1
+
+#Whether security should be enabled or disabled altogether
+management.security.enabled=false
+management.security.roles=ACTUATOR,SUPERUSER
+
+#default user
+security.user.role=ACTUATOR
+security.user.name=admin
+security.user.password=password
+
+management.endpoint.restart.enabled=true
+endpoints.restart.enabled = true
+management.context-path=/foo
