--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>core-service</artifactId>
     <version>0.5.0</version>
     <packaging>war</packaging>
+    <description>https://github.com/iridiumhawk/coreservice.git</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
