--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -29,3 +29,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 server.port = 8181
 #spring.profiles.active=prod
+
+logging.level.root=info
+logging.level.org.springframework=warn
+logging.level.org.hibernate=warn
