add properties for mongoDb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,21 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+#Mongo
+#spring.data.mongodb.host=[host]
+#spring.data.mongodb.port=[port]
+#spring.data.mongodb.authentication-database=[authentication_database]
+#spring.data.mongodb.username=[username]
+#spring.data.mongodb.password=[password]
+#spring.data.mongodb.database=rest_tutorial
+
 server.address = localhost
 server.port = 8181
+
 #spring.profiles.active=prod
-#logging.level.root= info
-logging.level.org.springframework.web= info
+
+#logging.level.root=info
+logging.level.org.springframework.web=info
 logging.level.org.hibernate=info
 logging.level.com.zaxxer.hikari=info
 logging.level.org.mongodb.driver=info
