--- a/pom.xml
+++ b/pom.xml
@@ -114,12 +114,6 @@
             <scope>runtime</scope>
             <!--<scope>test</scope>-->
         </dependency>
-        <!--test embedded db-->
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -240,5 +234,18 @@
         </plugins>
     </build>
 
+    <profiles>
+      <profile>
+          <id>embedded</id>
+          <dependencies>
+              <!--test embedded db-->
+              <dependency>
+                  <groupId>de.flapdoodle.embed</groupId>
+                  <artifactId>de.flapdoodle.embed.mongo</artifactId>
+                  <scope>test</scope>
+              </dependency>
+          </dependencies>
+      </profile>
+    </profiles>
 
 </project>
