--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,3 +33,15 @@ server.port = 8181
 logging.level.root=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
+
+#mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
