--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cherkasov</groupId>
     <artifactId>core-service</artifactId>
-    <version>0.5.1</version>
+    <version>0.6.2</version>
     <packaging>war</packaging>
     <description>https://github.com/iridiumhawk/coreservice.git</description>
 
@@ -23,6 +23,7 @@
         <java.version>1.8</java.version>
         <log4j.version>2.8.2</log4j.version>
         <start-class>com.cherkasov.CoreApplication</start-class>
+        <skipTests>true</skipTests>
         <!--<hibernate.version>5.2.10.Final</hibernate.version>-->
     </properties>
 
@@ -194,6 +195,15 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <skipTests>${skipTests}</skipTests>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
                 <version>3.1.4</version>
@@ -208,7 +218,7 @@
                             <info>
                                 <title>Smart Home - REST API</title>
                                 <description>REST API interface and documentation.</description>
-                                <version>v.0.4</version>
+                                <version>v.0.6</version>
                                 <contact>
                                     <email>hawk_san@mail.ru</email>
                                     <name>Alexey Cherkasov</name>
@@ -238,7 +248,7 @@
       <profile>
           <id>embedded</id>
           <dependencies>
-              <!--test embedded db-->
+              <!--test embedded mongodb-->
               <dependency>
                   <groupId>de.flapdoodle.embed</groupId>
                   <artifactId>de.flapdoodle.embed.mongo</artifactId>
