--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,15 +54,23 @@ logging.level.org.thymaleaf=info
 
 #mail properties
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=username
 spring.mail.password=password
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+#custom
+channels.sms.apikey=1f587ef2-cf08-4584-7968-28b498643bb5
+channels.sms.pattern=https://sms.ru/sms/send?api_id={0}&to={1}&text={2}&json=1
+device.command.pattern=http://*:8083/
 
 ##############################
 #actuator
